# community-ai-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_daily_summaries.py  003_community_metrics.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/capture/: base.py  factory.py  ffmpeg_rtsp.py  opencv_sources.py  preview.py  rtsp.py  synthetic.py  url_utils.py
backend/app/cli/: seed.py
backend/app/core/: config.py  exceptions.py  handlers.py  logging.py
backend/app/database/: __init__.py  base.py  seed.py  session.py
backend/app/detection/: __init__.py  base.py  factory.py  null.py  pipeline.py  yolo.py
backend/app/events/: __init__.py  base.py  engine.py  factory.py
backend/app/llm/: __init__.py  base.py  factory.py  ollama.py  prompts.py  schemas.py
backend/app/models/: __init__.py
backend/app/notifications/: __init__.py  base.py  factory.py  filters.py  messages.py  service.py  telegram.py
backend/app/repositories/: __init__.py  camera_repository.py  detection_repository.py  event_repository.py  metrics_repository.py  seed_repository.py  summary_repository.py
backend/app/rules/: __init__.py  base_rule.py  config.py  (+3 more)
backend/docs/: telegram-notifications.md
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_exception_handlers.py
(+155 files in other folders)
